--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <meta name="description" content="Suraj Bansal's Personal Website" />
-	<meta name="keywords" content="suraj, bansal, student researcher" />
+	<meta name="keywords" content="suraj, bansal, student researcher, medical student" />
    <meta name="author" content="Suraj Bansal" />
 
    <!-- CSS Files -->
@@ -75,7 +75,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a third-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a first-year Medical Student at the <a href="https://www.uottawa.ca/faculty-medicine/" target="_blank" class="text-emphasis p-bold p-spaced-underline">University of Ottawa</a>, and a student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring local coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                
                <div class = "about-image fade">
@@ -119,55 +119,11 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>President's Advisory Committee (PACBIC)</h5>
-                        <h6>McMaster University</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/mcmaster.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Summer Studentship</h5>
-                        <h6>University of Toronto Temerty Center for AI in Medicine</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/tcairem.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Summer Student</h5>
-                        <h6>UofT Department of Molecular Genetics</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/uoftmbp.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
                         <h5>Editor-in-Chief</h5>
-                        <h6>McMaster's Undergraduate Health Sciences Journal</h6>
+                        <h6>The Meducator Health Sciences Journal</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/meducator_white.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Founding Chairman</h5>
-                        <h6>National Council of Undergraduate Academia</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/ncoua.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -185,11 +141,55 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Project Member</h5>
+                        <h5>Project Co-Lead</h5>
                         <h6>Hamilton Homelessness Mortality Project</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/hamsmart.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>President's Advisory Committee (PACBIC)</h5>
+                        <h6>McMaster University</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/mcmaster.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Undergraduate Course Consultant</h5>
+                        <h6>McMaster University</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/mcmaster.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Summer Research Student</h5>
+                        <h6>UofT Department of Molecular Genetics</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/uoftmbp.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Founding Chairman</h5>
+                        <h6>National Council of Undergraduate Academia</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/ncoua.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -207,22 +207,11 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Summer Shadow</h5>
-                        <h6>Baylor Scott and White Health</h6>
+                        <h5>Student Researcher</h5>
+                        <h6>McMaster Department of Family Medicine</h6>
                      </div>
                      <div class="experience-logo">
-                        <img src="assets/images/logos/bswhealth.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Research Assistant</h5>
-                        <h6>St. Michael's Research Centre</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/unityhealth.png" class="logo">
+                        <img src="assets/images/logos/mcmasterdfm.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -256,6 +245,17 @@
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/kidogo.png" class="logo">
+                     </div>
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class="experience-entry">
+                     <div class="experience-title">
+                        <h5>Director of Logistics</h5>
+                        <h6>Richmond Hill Mayor's Youth Committee</h6>
+                     </div>
+                     <div class="experience-logo">
+                        <img src="assets/images/logos/yac.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -444,7 +444,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a third-year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring Hamilton's vibrant coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a first-year Medical Student at the <a href="https://www.uottawa.ca/faculty-medicine/" target="_blank" class="text-emphasis p-bold p-spaced-underline">University of Ottawa</a>, and a student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring local coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/suraj_2023_2.jpg" style = "width:250px;height:250px">
