--- a/index.html
+++ b/index.html
@@ -45,27 +45,32 @@
             <li><a href="#contact">Contact</a></li>
          </ul>
       </nav>
+
       <!-- Landing Page -->
-      <header class = "section-1 welcome-text" id="welcome">
-         <h1 class = "fade">Suraj Bansal</h1>
-         <div class="fixed">
+      <header class = "section section-1 welcome-text" id="welcome">
+         <div class="container welcome-text">
+            <div class="center-text">
+               <img src="./assets/images/SB_logo.png" style="width: 700px; height: auto;">
+            </div>
+            <br>
             <div class="content">
                <div class="content__container">
-                 <ul class="content__container__list">
-                   <li class="content__container__list__item">STUDENT RESEARCHER</li>
-                   <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
-                   <li class="content__container__list__item">COFFEE ENTHUSIAST</li>
-                   <li class="content__container__list__item">AMATEUR CHEF</li>
-                 </ul>
+                  <ul class="content__container__list">
+                     <li class="content__container__list__item">MEDICAL STUDENT</li>
+                     <li class="content__container__list__item">STUDENT RESEARCHER</li>
+                     <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
+                     <li class="content__container__list__item">DIEHARD LEAFS FAN</li>
+                  </ul>
                </div>
-             </div>
-         </div>        
-         <div class="nav">
-            <ul class="nav-links">
-               <li class = "fade"><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
-               <li class = "fade"><a href="https://scholar.google.com/citations?user=KKKWvHkAAAAJ&hl=en" target = "_blank"><span>Google Scholar</span></a></li>
-               <li class = "fade"><a href="#contact"><span>Contact Me</span></a></li>
-            </ul>         
+            </div>
+            <br>
+            <div class="nav">
+               <ul class="nav-links">
+                  <li class = "fade"><a href="assets/documents/Suraj Bansal- Resume.pdf" target="_blank"><span>Resume</span></a></li>
+                  <li class = "fade" ><a href="https://scholar.google.com/citations?user=KKKWvHkAAAAJ&hl=en" target = "_blank"><span>Google Scholar</span></a></li>
+                  <li class = "fade"><a href="#contact"><span>Contact Me</span></a></li>
+               </ul>
+            </div>         
          </div>
       </header>
       <!-- About Suraj -->
@@ -75,11 +80,19 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a first-year Medical Student at the <a href="https://www.uottawa.ca/faculty-medicine/" target="_blank" class="text-emphasis p-bold p-spaced-underline">University of Ottawa</a>, and a student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in Acute Myeloid Leukemia. I'm currently building <a href="https://doi.org/10.1016/j.exphem.2023.06.130" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukaemia. Aside from research, you'll usually find me exploring local coffeeshops, strumming my acoustic guitar, or playing squash. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm 
+                     <span class = "text-emphasis p-bold">Suraj Bansal</span>! 
+                     I'm a second-year medical student at the 
+                     <a href="https://www.uottawa.ca/faculty-medicine/" target="_blank" class="text-emphasis p-bold p-spaced-underline">University of Ottawa</a>, 
+                     and a student researcher at <a href="http://www.jdstemcellresearch.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. 
+                     As an aspiring clinician-scientist, I'm interested in applying single-cell multi-omic, machine learning, and experimental approaches to understand disease heterogeneity and develop targeted therapeutics in acute leukemias. 
+                     I'm currently building <a href="https://doi.org/10.1182/blood-2024-211344" target="_blank" class="text-emphasis p-bold p-spaced-underline">ATLAS-AML</a>, 
+                     a cloud-based bioinformatics pipeline for transcriptomic meta-analysis in blood development and leukemia. 
+                     Aside from research, you'll usually find me exploring local coffeeshops, strumming my acoustic guitar, playing squash, or watching hockey. 
+                     Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
-               
                <div class = "about-image fade">
-                  <img src="assets/images/suraj_2023_2.jpg" style = "width:300px;height:300px">
+                  <img src="assets/images/suraj2025.jpg" style = "width:300px;height:300px">
                </div>
             </div>
          </div>
@@ -152,7 +165,7 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>President's Advisory Committee (PACBIC)</h5>
+                        <h5>President's Advisory Committee</h5>
                         <h6>McMaster University</h6>
                      </div>
                      <div class="experience-logo">
@@ -163,22 +176,11 @@
                <div class="swiper-slide shadow fade">
                   <div class="experience-entry">
                      <div class="experience-title">
-                        <h5>Undergraduate Course Consultant</h5>
+                        <h5>Bioinformatics Course Consultant</h5>
                         <h6>McMaster University</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/mcmaster.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Summer Research Student</h5>
-                        <h6>UofT Department of Molecular Genetics</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/uoftmbp.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -197,7 +199,7 @@
                   <div class="experience-entry">
                      <div class="experience-title">
                         <h5>Prime Minister</h5>
-                        <h6>York Region District School Board Presidents' Council</h6>
+                        <h6>York Region (YRDSB) Presidents' Council</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/yrpc.png" class="logo">
@@ -212,17 +214,6 @@
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/mcmasterdfm.png" class="logo">
-                     </div>
-                  </div>
-               </div>
-               <div class="swiper-slide shadow fade">
-                  <div class="experience-entry">
-                     <div class="experience-title">
-                        <h5>Project Lead</h5>
-                        <h6>Ryde AI</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/ryde.png" class="logo">
                      </div>
                   </div>
                </div>
@@ -252,7 +243,7 @@
                   <div class="experience-entry">
                      <div class="experience-title">
                         <h5>Director of Logistics</h5>
-                        <h6>Richmond Hill Mayor's Youth Committee</h6>
+                        <h6>Richmond Hill Mayor's Youth Action Committee</h6>
                      </div>
                      <div class="experience-logo">
                         <img src="assets/images/logos/yac.png" class="logo">
@@ -288,8 +279,8 @@
             <div class="swiper-button-next fade"></div>
             <div class="swiper-button-prev fade"></div>
          </div>
-         <div class="container center-text high-emphasis-text italicize cta fade">
-            <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
+         <div class="container center-text high-emphasis-text cta fade">
+            <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a>.</h6>
          </div>
       </section>
       <!-- Software Projects -->
@@ -305,7 +296,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.nature.com/articles/s41591-022-01819-x" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -314,7 +305,7 @@
                   <div class="project-row">
                      <span class="dot-python"></span>
                      <p>Python</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -323,7 +314,7 @@
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
                <div class="project small-bounce fade">
@@ -332,7 +323,7 @@
                   <div class="project-row">
                      <span class="dot-R"></span>
                      <p>R</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">Learn More!</a></h6>
+                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.exphem.org/article/S0301-472X(23)01404-2/pdf" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
             </div>
@@ -367,7 +358,7 @@
             <div class="footer-links center-text">
                <ul>
                   <li>
-                     <a href="malito:bansas14@mcmaster.ca">Email</a>
+                     <a href="malito:sbans087@uottawa.ca">Email</a>
                   </li>
                   <li>
                      <p>|</p>
@@ -414,10 +405,10 @@
                <div class="content">
                   <div class="content__container">
                      <ul class="content__container__list">
+                        <li class="content__container__list__item">MEDICAL STUDENT</li>
                         <li class="content__container__list__item">STUDENT RESEARCHER</li>
                         <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
                         <li class="content__container__list__item">COFFEE ENTHUSIAST</li>
-                        <li class="content__container__list__item">AMATEUR CHEF</li>
                      </ul>
                   </div>
                </div>
@@ -732,7 +723,7 @@
             <div class="footer-links center-text">
                <ul>
                   <li>
-                     <a href="malito:bansas14@mcmaster.ca" target="_blank">Email</a>
+                     <a href="malito:sbans087@uottawa.ca" target="_blank">Email</a>
                   </li>
                   <li>
                      <p>|</p>
